--- a/vc/femlib/femlib.vcxproj.filters
+++ b/vc/femlib/femlib.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="..\..\femlib\include\MatrixXd.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\femlib\include\Quadrature.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\femLib\src\Element.cpp">
@@ -75,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\femlib\src\ElementMeshStiffness.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\femlib\src\Quadrature.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
