--- a/vc/femlib/femlib.vcxproj
+++ b/vc/femlib/femlib.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="..\..\femlib\include\ElementRegGrid.hpp" />
     <ClInclude Include="..\..\femLib\include\Material.hpp" />
     <ClInclude Include="..\..\femlib\include\MaterialNeo.hpp" />
+    <ClInclude Include="..\..\femlib\include\MaterialQuad.hpp" />
     <ClInclude Include="..\..\femlib\include\MatrixXd.hpp" />
     <ClInclude Include="..\..\femlib\include\Quadrature.hpp" />
     <ClInclude Include="..\..\femlib\include\util.h" />
@@ -161,6 +162,7 @@
     <ClCompile Include="..\..\femlib\src\ElementRegGrid.cpp" />
     <ClCompile Include="..\..\femLib\src\Material.cpp" />
     <ClCompile Include="..\..\femlib\src\MaterialNeo.cpp" />
+    <ClCompile Include="..\..\femlib\src\MaterialQuad.cpp" />
     <ClCompile Include="..\..\femlib\src\Quadrature.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
