strain energy class

--- a/vc/femlib/femlib.vcxproj
+++ b/vc/femlib/femlib.vcxproj
@@ -141,10 +141,11 @@
     <ClInclude Include="..\..\femlib\include\ElementMesh.hpp" />
     <ClInclude Include="..\..\femlib\include\ElementRegGrid.hpp" />
     <ClInclude Include="..\..\femLib\include\Material.hpp" />
-    <ClInclude Include="..\..\femlib\include\MaterialNeo.hpp" />
+    <ClInclude Include="..\..\femlib\include\StrainEneNeo.hpp" />
     <ClInclude Include="..\..\femlib\include\MaterialQuad.hpp" />
     <ClInclude Include="..\..\femlib\include\MatrixXd.hpp" />
     <ClInclude Include="..\..\femlib\include\Quadrature.hpp" />
+    <ClInclude Include="..\..\femlib\include\StrainEne.hpp" />
     <ClInclude Include="..\..\femlib\include\util.h" />
     <ClInclude Include="..\..\femlib\include\World.hpp" />
   </ItemGroup>
@@ -161,9 +162,10 @@
     <ClCompile Include="..\..\femlib\src\ElementMeshStiffness.cpp" />
     <ClCompile Include="..\..\femlib\src\ElementRegGrid.cpp" />
     <ClCompile Include="..\..\femLib\src\Material.cpp" />
-    <ClCompile Include="..\..\femlib\src\MaterialNeo.cpp" />
+    <ClCompile Include="..\..\femlib\src\StrainEneNeo.cpp" />
     <ClCompile Include="..\..\femlib\src\MaterialQuad.cpp" />
     <ClCompile Include="..\..\femlib\src\Quadrature.cpp" />
+    <ClCompile Include="..\..\femlib\src\StrainEne.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
