--- a/vc/runtime/runtime.vcxproj.filters
+++ b/vc/runtime/runtime.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClCompile Include="..\..\runtime\runtime.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\runtime\UnitTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\runtime\UnitTests.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
