--- a/vc/femlib/femlib.vcxproj
+++ b/vc/femlib/femlib.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="..\..\femlib\include\ElementHex.hpp" />
     <ClInclude Include="..\..\femlib\include\ElementMesh.hpp" />
     <ClInclude Include="..\..\femlib\include\ElementRegGrid.hpp" />
+    <ClInclude Include="..\..\femlib\include\femError.hpp" />
     <ClInclude Include="..\..\femLib\include\Material.hpp" />
     <ClInclude Include="..\..\femlib\include\Stepper.hpp" />
     <ClInclude Include="..\..\femlib\include\StepperGrad.hpp" />
@@ -163,6 +164,7 @@
     <ClCompile Include="..\..\femLib\src\ElementMesh.cpp" />
     <ClCompile Include="..\..\femlib\src\ElementMeshStiffness.cpp" />
     <ClCompile Include="..\..\femlib\src\ElementRegGrid.cpp" />
+    <ClCompile Include="..\..\femlib\src\femError.cpp" />
     <ClCompile Include="..\..\femLib\src\Material.cpp" />
     <ClCompile Include="..\..\femlib\src\Stepper.cpp" />
     <ClCompile Include="..\..\femlib\src\StepperGrad.cpp" />
