--- a/vc/StepperCPU/StepperCPU.vcxproj
+++ b/vc/StepperCPU/StepperCPU.vcxproj
@@ -119,9 +119,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\StepperCPU\src\AdmmCPU.cpp" />
     <ClCompile Include="..\..\StepperCPU\src\StepperNewton.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\StepperCPU\include\AdmmCPU.hpp" />
     <ClInclude Include="..\..\StepperCPU\include\StepperNewton.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
