--- a/vc/StepperCPU/StepperCPU.vcxproj
+++ b/vc/StepperCPU/StepperCPU.vcxproj
@@ -120,10 +120,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\StepperCPU\src\AdmmCPU.cpp" />
+    <ClCompile Include="..\..\StepperCPU\src\LinSolve.cpp" />
     <ClCompile Include="..\..\StepperCPU\src\StepperNewton.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\StepperCPU\include\AdmmCPU.hpp" />
+    <ClInclude Include="..\..\StepperCPU\include\LinSolve.hpp" />
     <ClInclude Include="..\..\StepperCPU\include\StepperNewton.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
