--- a/vc/femlib/femlib.vcxproj
+++ b/vc/femlib/femlib.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="..\..\femlib\include\ElementRegGrid.hpp" />
     <ClInclude Include="..\..\femlib\include\femError.hpp" />
     <ClInclude Include="..\..\femLib\include\Material.hpp" />
+    <ClInclude Include="..\..\femlib\include\MeshMulti.hpp" />
     <ClInclude Include="..\..\femlib\include\Stepper.hpp" />
     <ClInclude Include="..\..\femlib\include\StepperGrad.hpp" />
     <ClInclude Include="..\..\femlib\include\StrainEneNeo.hpp" />
@@ -169,6 +170,7 @@
     <ClCompile Include="..\..\femlib\src\EMeshStiffnessSparse.cpp" />
     <ClCompile Include="..\..\femlib\src\femError.cpp" />
     <ClCompile Include="..\..\femLib\src\Material.cpp" />
+    <ClCompile Include="..\..\femlib\src\MeshMulti.cpp" />
     <ClCompile Include="..\..\femlib\src\Stepper.cpp" />
     <ClCompile Include="..\..\femlib\src\StepperGrad.cpp" />
     <ClCompile Include="..\..\femlib\src\StrainEneNeo.cpp" />
