--- a/StepperCPU/CMakeLists.txt
+++ b/StepperCPU/CMakeLists.txt
@@ -1,12 +1,14 @@
-PROJECT (FEM)
+PROJECT (StepperCPU)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 FILE(GLOB LIB_SRC "src/*.cpp")
 if(UNIX)
   ADD_DEFINITIONS(--std=c++0x)
 endif (UNIX)
-ADD_LIBRARY (TimeStepper ${LIB_SRC})
+ADD_LIBRARY (StepperCPU  ${LIB_SRC})
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/include")
-INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../femLib/include")
+INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../femlib/include")
+INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../vecmath/include")
+INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../include")
 
 SET(LIB_TYPE STATIC)	#set the lib type
