--- a/vecmath/CMakeLists.txt
+++ b/vecmath/CMakeLists.txt
@@ -1,2 +1,9 @@
-file(GLOB vecmath_SRC "src/*.cpp")
-add_library(vecmath ${vecmath_SRC})
+PROJECT (vecmath)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+
+FILE(GLOB LIB_SRC "src/*.cpp")
+INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/include")
+
+add_library(vecmath ${LIB_SRC})
+
+SET(LIB_TYPE STATIC)
