--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -1,12 +1,11 @@
-PROJECT (FEM)
+PROJECT (FEMViewer)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 FILE(GLOB LIB_SRC "src/*.cpp")
-
 ADD_DEFINITIONS(--std=c++0x)
-ADD_LIBRARY (FEMLib ${LIB_SRC})
-INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/include")
-INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../include")
-INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../vecmath/include")
 
-SET(LIB_TYPE STATIC)	#set the lib type
+ADD_LIBRARY (FEMViewer ${LIB_SRC})
+INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/include")
+INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../femlib/include")
+INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../vecmath/include")
+SET(LIB_TYPE STATIC)
