--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -1,10 +1,11 @@
 PROJECT (RunTime)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-add_subdirectory(../femlib "${CMAKE_CURRENT_BINARY_DIR}/femlib")
-add_subdirectory(../viewer "${CMAKE_CURRENT_BINARY_DIR}/viewer")
-add_subdirectory(../vecmath "${CMAKE_CURRENT_BINARY_DIR}/vecmath")
-add_subdirectory(../StepperCPU "${CMAKE_CURRENT_BINARY_DIR}/StepperCPU")
+add_subdirectory(../femlib       "${CMAKE_CURRENT_BINARY_DIR}/femlib")
+add_subdirectory(../viewer       "${CMAKE_CURRENT_BINARY_DIR}/viewer")
+add_subdirectory(../vecmath      "${CMAKE_CURRENT_BINARY_DIR}/vecmath")
+add_subdirectory(../StepperCPU   "${CMAKE_CURRENT_BINARY_DIR}/StepperCPU")
+add_subdirectory(../StepperIpopt "${CMAKE_CURRENT_BINARY_DIR}/StepperIpopt")
 
 FILE(GLOB EXE_SRC "*.cpp")
 ADD_DEFINITIONS(--std=c++0x)
@@ -12,6 +13,7 @@ INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../femlib/include")
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../vecmath/include")
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../viewer/include")
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../StepperCPU/include")
+INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../StepperIpopt/include")
 
 LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/../lib-linux)
 
@@ -19,6 +21,7 @@ INCLUDE_DIRECTORIES(include)
 ADD_EXECUTABLE(Run ${EXE_SRC})
 
 TARGET_LINK_LIBRARIES(Run StepperCPU)
+TARGET_LINK_LIBRARIES(Run StepperIpopt)
 TARGET_LINK_LIBRARIES(Run FEMLib)
 TARGET_LINK_LIBRARIES(Run FEMViewer)
 TARGET_LINK_LIBRARIES(Run vecmath)
