--- a/StepperIpopt/CMakeLists.txt
+++ b/StepperIpopt/CMakeLists.txt
@@ -6,6 +6,7 @@ if(UNIX)
   ADD_DEFINITIONS(--std=c++0x)
 endif (UNIX)
 ADD_LIBRARY (StepperIpopt ${LIB_SRC})
+INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/include/coin")
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/include")
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../femlib/include")
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../vecmath/include")
