--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -13,6 +13,7 @@ INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../femlib/include")
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../vecmath/include")
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../viewer/include")
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../StepperCPU/include")
+INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../StepperIpopt/include/coin")
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../StepperIpopt/include")
 
 LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/../lib-linux)
