--- a/sampler/CMakeLists.txt
+++ b/sampler/CMakeLists.txt
@@ -6,7 +6,7 @@ add_subdirectory(../viewer       "${CMAKE_CURRENT_BINARY_DIR}/viewer")
 add_subdirectory(../vecmath      "${CMAKE_CURRENT_BINARY_DIR}/vecmath")
 add_subdirectory(../StepperCPU   "${CMAKE_CURRENT_BINARY_DIR}/StepperCPU")
 
-FILE(GLOB EXE_SRC "*.cpp" "src/*.cpp")
+FILE(GLOB EXE_SRC "*.cpp")
 
 ADD_DEFINITIONS(--std=c++0x)
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../femlib/include")
