--- a/vc/femlib/femlib.vcxproj
+++ b/vc/femlib/femlib.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="..\..\femlib\src\Quadrature.cpp" />
     <ClCompile Include="..\..\femlib\src\Stepper.cpp" />
     <ClCompile Include="..\..\femlib\src\StepperGrad.cpp" />
+    <ClCompile Include="..\..\femlib\src\StrainCorotLin.cpp" />
     <ClCompile Include="..\..\femlib\src\StrainEne.cpp" />
     <ClCompile Include="..\..\femlib\src\StrainEneNeo.cpp" />
     <ClCompile Include="..\..\femlib\src\StrainLin.cpp" />
@@ -172,6 +173,7 @@
     <ClInclude Include="..\..\femlib\include\Quadrature.hpp" />
     <ClInclude Include="..\..\femlib\include\Stepper.hpp" />
     <ClInclude Include="..\..\femlib\include\StepperGrad.hpp" />
+    <ClInclude Include="..\..\femlib\include\StrainCorotLin.hpp" />
     <ClInclude Include="..\..\femlib\include\StrainEne.hpp" />
     <ClInclude Include="..\..\femlib\include\StrainEneNeo.hpp" />
     <ClInclude Include="..\..\femlib\include\StrainLin.hpp" />
