--- a/vc/femlib/femlib.vcxproj
+++ b/vc/femlib/femlib.vcxproj
@@ -134,7 +134,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\femlib\src\ArrayUtil.cpp" />
     <ClCompile Include="..\..\femlib\src\Element.cpp" />
-    <ClCompile Include="..\..\femlib\src\ElementCoarse.cpp" />
+    <ClCompile Include="..\..\femlib\src\ElementHier.cpp" />
     <ClCompile Include="..\..\femlib\src\ElementHex.cpp" />
     <ClCompile Include="..\..\femlib\src\ElementMesh.cpp" />
     <ClCompile Include="..\..\femlib\src\ElementRegGrid.cpp" />
@@ -159,7 +159,7 @@
     <ClInclude Include="..\..\femlib\include\ArrayUtil.hpp" />
     <ClInclude Include="..\..\femlib\include\BoundVec3.hpp" />
     <ClInclude Include="..\..\femlib\include\Element.hpp" />
-    <ClInclude Include="..\..\femlib\include\ElementCoarse.hpp" />
+    <ClInclude Include="..\..\femlib\include\ElementHier.hpp" />
     <ClInclude Include="..\..\femlib\include\ElementHex.hpp" />
     <ClInclude Include="..\..\femlib\include\ElementMesh.hpp" />
     <ClInclude Include="..\..\femlib\include\ElementRegGrid.hpp" />
