--- a/vc/femlib/femlib.vcxproj
+++ b/vc/femlib/femlib.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="..\..\femlib\src\ElementHier.cpp" />
     <ClCompile Include="..\..\femlib\src\ElementHex.cpp" />
     <ClCompile Include="..\..\femlib\src\ElementMesh.cpp" />
+    <ClCompile Include="..\..\femlib\src\ElementMeshHier.cpp" />
     <ClCompile Include="..\..\femlib\src\ElementRegGrid.cpp" />
     <ClCompile Include="..\..\femlib\src\EMeshStiffness.cpp" />
     <ClCompile Include="..\..\femlib\src\EMeshStiffnessSparse.cpp" />
@@ -164,6 +165,7 @@
     <ClInclude Include="..\..\femlib\include\ElementHier.hpp" />
     <ClInclude Include="..\..\femlib\include\ElementHex.hpp" />
     <ClInclude Include="..\..\femlib\include\ElementMesh.hpp" />
+    <ClInclude Include="..\..\femlib\include\ElementMeshHier.hpp" />
     <ClInclude Include="..\..\femlib\include\ElementRegGrid.hpp" />
     <ClInclude Include="..\..\femlib\include\femError.hpp" />
     <ClInclude Include="..\..\femlib\include\FileUtil.hpp" />
