--- a/vc/runtime/runtime.vcxproj
+++ b/vc/runtime/runtime.vcxproj
@@ -118,7 +118,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;WIN64;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)\..\..\StepperCPU\include;$(ProjectDir)\..\..\viewer\include;$(ProjectDir)\..\..\StepperCuda\include;$(ProjectDir)\..\..\vecmath\include;$(ProjectDir)\..\..\femlib\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\..\..\include;$(ProjectDir)\..\..\StepperCPU\include;$(ProjectDir)\..\..\viewer\include;$(ProjectDir)\..\..\StepperCuda\include;$(ProjectDir)\..\..\vecmath\include;$(ProjectDir)\..\..\femlib\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -161,7 +161,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;WIN64;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)\..\..\StepperCPU\include;$(ProjectDir)\..\..\viewer\include;$(ProjectDir)\..\..\StepperCuda\include;$(ProjectDir)\..\..\vecmath\include;$(ProjectDir)\..\..\femlib\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\..\..\include;$(ProjectDir)\..\..\StepperCPU\include;$(ProjectDir)\..\..\viewer\include;$(ProjectDir)\..\..\StepperCuda\include;$(ProjectDir)\..\..\vecmath\include;$(ProjectDir)\..\..\femlib\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
